# backend/internal/api/routes/html_routes.go
@@ -1,32 +1,30 @@
 package routes
 
 import (
+	"ProjMatrix/internal/converter"
 	"ProjMatrix/internal/entity"
-	"github.com/gin-contrib/sessions"
 	"github.com/gin-gonic/gin"
-	"log"
 	"net/http"
 )
 
-func RegisterHTMLRoutes(router *gin.Engine, workerClient entity.WorkersClient) {
+func RegisterHTMLRoutes(router *gin.Engine, workerClient *entity.WorkersClient) {
 	router.GET("/", func(c *gin.Context) {
 		c.HTML(http.StatusOK, "index.html", nil)
 	})
 
 	router.GET("/results", func(c *gin.Context) {
-		session := sessions.Default(c)
-		value := session.Get("calculationResult")
-
-		if result, ok := value.(entity.CalculationResult); ok {
-			c.HTML(http.StatusOK, "results.html", gin.H{
-				"OperationType":    result.OperationType,
-				"ResultMatrix":     result.ResultMatrix,
-				"TimeCalc":         result.TimeCalc,
-				"TimeParallelCalc": result.TimeParallelCalc,
-			})
-		} else {
-			log.Printf("Error getting the result: %+v \n", value)
-			c.JSON(http.StatusNotFound, gin.H{"error": "The result was not found. Perform the calculation again."})
+		value, dur, err := workerClient.PgRepository.Get(c, workerClient.Session)
+		if err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{"error": err})
+			return
 		}
+		result := converter.ByteToCalculationResult(value)
+		c.HTML(http.StatusOK, "results.html", gin.H{
+			"OperationType":    result.OperationType,
+			"ResultMatrix":     result.ResultMatrix,
+			"TimeCalc":         dur,
+			"TimeParallelCalc": result.TimeParallelCalc,
+		})
+
 	})
 }
